# cv_hw1

./: .gitignore  README.md  pyproject.toml  run.py
outputs/2026-03-08/14-43-38/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-08/14-44-18/.hydra/: hydra.yaml
src/: smoothing.py  transforms.py  visualization.py  warp_utils.py
