[project]
name = "cv_hw1"
version = "0.1.0"
description = ""
authors = [
    {name = "SevaErsh",email = "erschidvs@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "computer_vision", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
